--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-PUBLIC_KEY = "MTE3OTk3MjUxNDQ5NjExODg0NA.GywuZ5.XzTCGTlgcTpzOey8-odp8tSyfWuPeFiBdnPOoY"
+PUBLIC_KEY = "MTE3OTk3MjUxNDQ5NjExODg0NA.GFub-V.Y26EKSPMcOSdRwUX1bVk7E7afJ1ta75nCN5fqU"
